# DR-RD

./: .env  .env.example  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  AGENTS.md  AUDIT_STATUS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MIGRATION.md  Makefile  README.md  SECURITY.md  SUPPORT.md  app.py  collaboration.py  dev-requirements.in  dev-requirements.lock.txt  docker-compose.yml  firestore.rules  mypy.ini  pyproject.toml  repo_map.yaml  requirements-dev.txt  requirements.in  requirements.lock.txt  requirements.txt  streamlit_app.py  worker_service.py
.dr_rd/: .gitignore  experiments.json  flags.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  pull_request_template.md
.streamlit/: config.toml  secrets.example.toml
agents/: __init__.py  ai_rd_coordinator_agent.py  base_agent.py  chemical_surface_science_specialist_agent.py  chief_scientist_agent.py  cto_agent.py  data_scientist_analytics_engineer_agent.py  documentation_agent.py  electronics_embedded_controls_engineer_agent.py  engineer_agent.py  fluorescence_biological_sample_expert_agent.py  generic_domain_agent.py  geometry_tool.py  hrm_agent.py  hrm_role_agent.py  ip_analyst_agent.py  marketing_agent.py  materials_engineer_agent.py  materials_process_engineer_agent.py  mechanical_precision_motion_engineer_agent.py  mechanical_systems_lead_agent.py  nonlinear_optics_engineer_agent.py  obfuscator.py  optical_systems_engineer_agent.py  orchestrator.py  patent_agent.py  photonics_electronics_engineer_agent.py  planner_agent.py  product_manager_translational_lead_agent.py  project_manager_principal_investigator_agent.py  prototyping_test_lab_manager_agent.py  publisher_agent.py  qa_agent.py  quantum_optics_physicist_agent.py  reflection_agent.py  regulatory_agent.py  regulatory_compliance_lead_agent.py  regulatory_specialist_agent.py  research_scientist_agent.py  router.py  (+5 more)
app/: __init__.py  agent_runner.py  agent_trace_ui.py  config_loader.py  init.py  lite_runner.py  logging_setup.py  price_loader.py  safety.py  ui_cost_meter.py  ui_presets.py
app_builder/: __init__.py  codegen.py  spec.py
audits/: 2025-09-10_audit.md  2025-09-11_audit.md  2025-09-12-1_audit.md  2025-09-12_audit.md  2025-09-16_audit.md  2025-09-18_audit.md  CHANGELOG.md  prompt_audit_20250828.csv
conda/: README.md  meta.yaml
config/: __init__.py  (+26 more)
(+1280 files in other folders)
